--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Simple & easy to use mockup generator from MockupsJar",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest --ci"
     },
     "keywords": [
         "mockup",
