--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "devDependencies": {
         "canvas": "^2.6.1",
-        "jest": "^26.6.3"
+        "jest": "^26.6.3",
+        "prettier": "^2.2.1"
     }
 }
